infra/k8s/edge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge
  namespace: progctf-fleet
  labels:
    app.kubernetes.io/name: edge
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: the-voyage
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: edge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: edge
        app.kubernetes.io/component: gateway
      annotations:
        checksum/config: "REPLACED_BY_CI"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: edge
          image: nginx:1.27.3-alpine@sha256:fb39280b7b9eba5727c884a3c7810002e69e8f961cc373b89c92f1f1d1f63f6a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "1000m"
              memory: "256Mi"
          readinessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - name: edge-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: edge.conf
              readOnly: true
            - name: edge-snippets
              mountPath: /etc/nginx/snippets
              readOnly: true
            - name: var-cache-nginx
              mountPath: /var/cache/nginx
            - name: var-run
              mountPath: /var/run
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
              add: [NET_BIND_SERVICE]
      volumes:
        - name: edge-conf
          configMap:
            name: edge-config
            items: [{ key: edge.conf, path: edge.conf }]
        - name: edge-snippets
          configMap:
            name: edge-config
            items: [{ key: proxy-common.conf, path: proxy-common.conf }]
        - name: var-cache-nginx
          emptyDir: { sizeLimit: 64Mi }
        - name: var-run
          emptyDir: { sizeLimit: 8Mi }
